# uptix

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md  default.nix  docker-images.nix  flake.nix  lib.nix  shell.nix  test-single-dep.sh  uptix-docker-image-pull.md  uptix-feature-request.md
.claude/: settings.local.json
.github/workflows/: ci.yml
example/: configuration.nix  flake.nix  hardware-configuration.nix
modules/: default.nix  tracing.nix
src/: backend.rs  common.rs  deps.rs  docker.rs  error.rs  lib.rs  main.rs  util.rs
tests/: cli_integration.rs  dependency_matching.rs
