[package]
name = "uptix"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
dkregistry = "0.5.0"
enum-as-inner = "0.4.0"
erased-serde = "0.3.20"
lazy_static = "1.4.0"
regex = "1.5.5"
reqwest = { version = "0.10.10", features = ["json"] }
rnix = "0.10.1"
serde = "1.0.137"
serde_json = "1.0.80"
tokio = { version = "0.2", features = ["full"] }
walkdir = "2.3.2"

[dev-dependencies]
env_logger = "0.9.0"
mockito = "0.31.0"
