[package]
name = "uptix"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.58"
# see https://github.com/camallo/dkregistry-rs/issues/209
dkregistry = { git = "https://github.com/camallo/dkregistry-rs.git", rev = "421c28c8ba1722330b21972c0e9668a2b8e06f76" }
enum-as-inner = "0.5.1"
erased-serde = "0.3.24"
lazy_static = "1.4.0"
miette = { version = "5.4.1", features = ["fancy"] }
regex = "1.5.6"
reqwest = { version = "0.11.13", features = ["json"] }
rnix = "0.10.2"
serde = "1.0.138"
serde_json = "1.0.88"
thiserror = "1.0"
tokio = { version = "1.22", features = ["full"] }
url = "2.2.2"
walkdir = "2.3.2"
text-size = "1.1.0"

[dev-dependencies]
env_logger = "0.9.3"
mockito = "0.31.0"
