[package]
name = "uptix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uptix"
path = "src/main.rs"

[lib]
name = "uptix"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.58"
clap = { version = "4.5", features = ["derive"] }
# see https://github.com/camallo/dkregistry-rs/issues/209
dkregistry = { git = "https://github.com/luizribeiro/dkregistry-rs.git", rev = "4889b521cb3a325fdd6df51d839baa5cfd50d6c5" }
enum-as-inner = "0.5.1"
erased-serde = "0.3.24"
lazy_static = "1.4.0"
miette = { version = "5.4.1", features = ["fancy"] }
regex = "1.7.1"
reqwest = { version = "0.11.13", features = ["json"] }
rnix = "0.10.2"
serde = "1.0.152"
serde_json = "1.0.88"
thiserror = "1.0"
tokio = { version = "1.22", features = ["full"] }
url = "2.2.2"
walkdir = "2.3.2"
text-size = "1.1.0"

[dev-dependencies]
env_logger = "0.10.0"
mockito = "0.31.0"
serial_test = "3.1"
tempfile = "3.8"
